<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ProcurAnimal</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_home">Animais desaparecidos</string>
    <string name="menu_meus_pets">Meus bichos perdidos</string>
    <string name="menu_mensagens">Chat</string>
    <string name="menu_minha_conta">Minha conta</string>
    <string name="menu_configuracao">Configurações</string>
    <string name="menu_cadastroanimal">Cadastro de Animais</string>
    <string name="menu_maps">Google Maps</string>

    <string name="login">Login</string>
    <string name="nav_logout">Sair</string>


    <string name="facebook_application_id" translatable="false">227770555068863</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb227770555068863</string>


    <string name="saiu">Você saiu do app. Para se conectar faça o login novamente.</string>

<!--    // Strings tela de Cadastro de Usuario-->
    <string name="e_mail">E-mail</string>
    <string name="nome">Nome</string>
    <string name="endereco">Endereço</string>
    <string name="cidade">Cidade</string>
    <string name="estado" formatted="true">Estado</string>
    <string name="ddd">DDD</string>
    <string name="telefone">Telefone</string>
    <string name="salvar">Salvar</string>
    <string name="textview">TextView</string>
    <string name="raio">Raio de Busca</string>

<!--    // Strings tela de Cadastro de Animais-->

    <string name="foto">Fotos Animal</string>
    <string name="racaAnimal">Raça do Animal</string>
    <string name="nomeAnimal">Nome do Animal</string>
    <string name="idadeAnimal">Idade do Animal</string>
    <string name="corAnimal">Cor do Animal</string>
    <string name="porteAnimal">Porte do Animal</string>
    <string name="tipoAnimal">Tipo do Animal</string>
    <!--<string name="permitir_contato">Permitir Contato ?</string>-->
    <string name="permitir_recompensa">Recompensa</string>
    <string name="recompensa">R$</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="local_perda">Região da Perda</string>
    <string name="cadastro_animais">Cadastrar</string>
    <string name="select">Selecione Multiplas Imagens</string>
    <string name="selecionar">Selecionar</string>
    <string name="chat">Chat</string>

<!--    //mensagens de erro-->
    <string name="error_localidades">Erro ao Buscar Localidades</string>
    <string name="error_porte_animal">Erro ao adicioanra o porte</string>


    <string name="click">+</string>

<!--    //Maps-->
    <string name="title_activity_maps">"Marcar Localização "</string>
    <string name="fabMaps">+</string>
    <string name="Almentar_zoom">+</string>
    <string name="Diminuir_zoom">-</string>
    <string name="tilt_less">\u2193</string>
    <string name="tilt_more">\u2191</string>

<!--    // Strings Configurações-->
    <string name="define_raio">Configurar Raio de Busca</string>

    <!--<string name="google_maps_key">AIzaSyBx-3_O9kRnk67rhwWq7Zf0JAi4eAvQFIc</string>-->
    <string name="abrir_maps">Select</string>
    <string name="location">Não foi possível mostrar o local - é necessária permissão</string>
    <string name="title_activity_maps2">Map</string>
    <string name="tow_map_explanation">Indique a posição correta movendo o pino de localização</string>


<!--    //Strings Cards-->
    <string name="porteAnimalCard">Porte do Animal</string>
    <string name="tipoAnimalCard">Tipo do Animal</string>
    <string name="activate">Ativado</string>
    <string name="desactive">Desativado</string>
    <string name="estatusPost">Estatus Post</string>

<!--    //Chat-->
    <!--<string name="app_name">Messsaga</string>-->
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="registration">Registration</string>
    <string name="adicionar_foto">Adicionar Foto</string>
    <string name="salva_imagens">Salvar Fotos</string>
    <string name="selecionar_imagens">Selecionar Imagens</string>
    <string name="imagem_do_animal_desaparecido">Imagem do Animal desaparecido</string>
    <string name="webview">Webview</string>

    <string name="new_user_title">Bem-vindo ao ProcurAnimal!</string>
    <string name="new_user_description">A solução perfeita para procurar seu animal perdido! </string>
    <string name="permission_title">Precisamos salvar suas informações!</string>
    <string name="permission_description">Para que o aplicativo funcione corretamente, conceda as permissões.</string>
    <string name="grant_permission">Conceder permissão</string>
    <string name="grant_permission_toast">Você precisa CONCEDER PERMISSÃO para continuar</string>
    <string name="finish_slide_title">Tudo Pronto!</string>
    <string name="finish_slide_description">Você pode começar o cadatro de seu animal!\n\nAtenção! Preencher o cadastro com todas as informações, é crucial para facilitar e melhorar o método de busca do aplicativo.\n\n</string>
    <string name="dialog_permission_button">Permitir</string>
    <string name="dialog_permission_title">Atenção!</string>
    <string name="dialog_permission_description">Permita o acesso as fotos, mídia e arquivos do dispositivo é crucial para o aplicativo funcionar. Por favor, conceda a permissão.</string>
    <string name="dialog_permission_check">Reconhecemos que você negou a permissão de acesso ao armazenamento para este aplicativo. Para que este aplicativo funcione, o acesso ao armazenamento é necessário.</string>
    <string name="mensagem_aviso">Em breve estaremos com o chat de mensagens internas funcionando!! Para contatar algum dono de animal, redirecione via WhatsApp.</string>
    <string name="detalhes_animal">Detalhes do Animal</string>
    <string name="title_cadastro_animal">Cadastro de Animais</string>
    <string name="editar_cadastro">Editar Cadastro</string>

</resources>
